# sgkit

./: .buildinfo  .cirun.yml  .coveragerc  .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Contribute-Docs.md  GOVERNANCE.md  MANIFEST.in  README.md  api.html  cirun.yml  conftest.py  contributing.html  genindex.html  getting_started.html  index.html  io.html  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements-numpy1-dev.txt  requirements-numpy1.txt  requirements-numpy2-dev.txt  requirements-numpy2.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sgkit-gpu-malariagen.ipynb  usage.html  user_guide.html  vcf.html  vcf2zarr.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: test_sgkit.py  test_sgkit_bgen.py  test_sgkit_plink.py  test_sgkit_vcf.py  upstream_install.py
.github/workflows/: benchmark.yml  build-gpu.yml  build-numpy-1.yml  build-numpy-2.yml  build.yml  check-docs.yml  cubed.yml  docs.yml  release.yml  upstream.yml  validation.yml  wheels.yml  windows.yml
0.1.0a1/: genindex.html  index.html  searchindex.js
0.1.0a1/_sources/: api.rst.txt
0.10.0/: api.html  changelog.html  genindex.html  index.html  searchindex.js  user_guide.html
0.10.0/_sources/: about.rst.txt  api.rst.txt  changelog.rst.txt  index.rst.txt  news.rst.txt
0.10.0/_static/: switcher.json
0.10.0/blog/: 2022.html  archive.html  author.html  drafts.html
0.10.0/examples/: gwas_tutorial.html  relatedness_tutorial.html
0.10.0/news/: introducing_sgkit.html
0.2.0a1/: api.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html  vcf.html
0.2.0a1/_sources/: index.rst.txt
0.3.0/: api.html  contributing.html  genindex.html  getting_started.html  index.html  search.html  searchindex.js  user_guide.html  vcf.html
0.3.0/_sources/: api.rst.txt  index.rst.txt  vcf.rst.txt
0.3.0/examples/: gwas_tutorial.html  index.html
0.4.0/: about.html  api.html  contributing.html  genindex.html  getting_started.html  how_do_i.html  index.html  search.html  searchindex.js  user_guide.html  vcf.html
0.4.0/_sources/: vcf.rst.txt
0.4.0/_static/: docsearch.sbt.js
0.4.0/examples/: gwas_tutorial.html  index.html
0.5.0/: about.html  api.html  contributing.html  genindex.html  getting_started.html  how_do_i.html  index.html  objects.inv  searchindex.js  user_guide.html
0.5.0/_sources/: user_guide.rst.txt
0.5.0/examples/: gwas_tutorial.html  index.html
0.6.0/: about.html  api.html  blog.html  changelog.html  contributing.html  genindex.html  getting_started.html  how_do_i.html  index.html  news.html  objects.inv  search.html  searchindex.js  user_guide.html  vcf.html
0.6.0/_sources/: changelog.rst.txt  getting_started.rst.txt
0.6.0/_static/: switcher.json  typehints.css
0.6.0/blog/: 2022.html  archive.html  author.html  category.html  drafts.html
0.6.0/examples/: gwas_tutorial.html  index.html
0.6.0/news/: introducing_sgkit.html
0.7.0/: api.html  blog.html  changelog.html  contributing.html  genindex.html  getting_started.html  how_do_i.html  news.html  objects.inv  searchindex.js  user_guide.html  vcf.html
0.7.0/_sources/: changelog.rst.txt  user_guide.rst.txt  vcf.rst.txt
0.7.0/blog/: 2022.html  archive.html  author.html  category.html  drafts.html
0.7.0/examples/: gwas_tutorial.html  index.html
0.7.0/news/: introducing_sgkit.html
0.8.0/: about.html  api.html  blog.html  changelog.html  genindex.html  getting_started.html  news.html  search.html  searchindex.js  user_guide.html  vcf.html
0.8.0/_sources/: api.rst.txt  changelog.rst.txt  user_guide.rst.txt
0.8.0/_static/: switcher.json
0.8.0/blog/: author.html
0.8.0/examples/: gwas_tutorial.html  relatedness_tutorial.html
0.8.0/news/: introducing_sgkit.html
0.9.0/: about.html  api.html  blog.html  changelog.html  contributing.html  genindex.html  getting_started.html  how_do_i.html  index.html  news.html  objects.inv  search.html  searchindex.js  user_guide.html  vcf.html
0.9.0/_sources/: changelog.rst.txt  contributing.rst.txt  getting_started.rst.txt
0.9.0/_static/: switcher.json
0.9.0/blog/: 2022.html  archive.html  author.html  category.html  drafts.html
0.9.0/examples/: gwas_tutorial.html  index.html  relatedness_tutorial.html
0.9.0/news/: introducing_sgkit.html
_sources/: api.rst.txt  contributing.rst.txt  getting_started.rst.txt  index.rst.txt  io.rst.txt  user_guide.rst.txt
benchmarks/: README.md  asv.conf.json  benchmarks_plink.py  benchmarks_stats.py  benchmarks_vcf.py
docs/: .gitignore  Dockerfile  Makefile  api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  getting_started.rst  how_do_i.rst  how_do_i_min.rst  index.rst  usage.rst  user_guide.rst  vcf.rst
docs/_static/: docsearch.sbt.css  switcher.json
docs/examples/: 1kg.schema.json  Genotype-Call-Dataset-From-SGKit-Zarr.ipynb  Genotype-Call-Dataset-From-SGKit-Zarr.rst  Genotype-Call-Dataset-From-VCF.ipynb  Genotype-Call-Dataset-Minimal-Numpy-Example.ipynb  gwas_tutorial.ipynb
docs/extensions/: typed_returns.py
docs/news/: introducing_sgkit.md
latest/: about.html  api.html  blog.html  changelog.html  contributing.html  genindex.html  getting_started.html  how_do_i.html  index.html  news.html  objects.inv  search.html  searchindex.js  user_guide.html  vcf.html
latest/_sources/: api.rst.txt  changelog.rst.txt  contributing.rst.txt  (+4 more)
reports-and-notebooks/: dask-report-pairwise-distance-blocks-correlation.html  dask-report-pairwise-distance-blocks.html  dask-report-pairwise-distance-blockwise-correlation.html  dask-report-pairwise-distance-blockwise.html  sgkit_with_coiled_correlation.ipynb  sgkit_with_coiled_euclidean.ipynb  task-stream-pairwise-distance-blocks.html  task-stream-pairwise-distance-blockwise.html
sgkit/: __init__.py  __main__.py  _windows_ssl_fix.py  accelerate.py  api.py  cli.py  cohorts.py  core.py  display.py  display_numba_fns.py  distarray.py  indexing.py  model.py  testing.py  typing.py  utils.py  variables.py  window.py
(+319 files in other folders)
