[metadata]
name = sgkit
author = sgkit Developers
author_email = project@sgkit.dev
license = Apache
description = Statistical genetics toolkit
long_description_content_type=text/x-rst
long_description =
    **sgkit** is an open source project for analyzing and manipulating genetic 
    variation data.  
url = https://github.com/sgkit-dev/sgkit
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages = sgkit
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy < 2
    xarray
    dask[array] >= 2022.01.0, <= 2024.8.0
    distributed >= 2022.01.0, <= 2024.8.0
    dask-ml
    scipy
    zarr >= 2.10.0, != 2.11.0, != 2.11.1, != 2.11.2, < 3
    numba
    typing-extensions
    fsspec != 2021.6.*
    scikit-learn
    pandas
    setuptools >= 41.2  # For pkg_resources
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[options.extras_require]
# For plink we need dask[dataframe], we already have
# dask[array] in install_requires, and since
# https://github.com/pypa/pip/issues/4957, pip
# will essentially ignore dask[dataframe] in the extras.
# We can workaround this by either adding pip flag
# --use-feature 2020-resolver, or installing
# dask[dataframe] in the install_requires, or just listing
# the 2 missing dependencies from dataframe, the way we do
# here, when pip finally gets a resolver, this won't be
# a problem. Here we opt for listing the 2 dependencies
# since this is the least user invasive solution.
plink =
    partd
    bed-reader
bgen =
    rechunker
    cbgen < 1.0.5; platform_system != "Windows"
    cbgen == 1.0.1; platform_system == "Windows"

[coverage:report]
fail_under = 100

[tool:pytest]
addopts = --doctest-modules --ignore=validation --cov-fail-under=100
norecursedirs = .eggs build docs
filterwarnings =
    error
    ignore::DeprecationWarning

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = sgkit
known_third_party = allel,dask,fire,glow,hail,hypothesis,invoke,msprime,numba,numpy,pandas,pkg_resources,pyspark,pytest,setuptools,sgkit_plink,sklearn,sphinx,typing_extensions,xarray,yaml,zarr
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88


[mypy-callee.*]
ignore_missing_imports = True
[mypy-dask.*]
ignore_missing_imports = True
[mypy-fsspec.*]
ignore_missing_imports = True
[mypy-dask_ml.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-numba.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-statsmodels.*]
ignore_missing_imports = True
[mypy-hypothesis.*]
ignore_missing_imports = True
[mypy-zarr.*]
ignore_missing_imports = True
[mypy-numcodecs.*]
ignore_missing_imports = True
[mypy-setuptools]
ignore_missing_imports = True
[mypy-sklearn.*]
ignore_missing_imports = True
[mypy-cbgen.*]
ignore_missing_imports = True
[mypy-rechunker.*]
ignore_missing_imports = True
[mypy-bed_reader.*]
ignore_missing_imports = True
[mypy-sphinx.*]
ignore_missing_imports = True
[mypy-yarl.*]
ignore_missing_imports = True
[mypy-allel.*]
ignore_missing_imports = True
[mypy-networkx.*]
ignore_missing_imports = True
[mypy-toolz.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-sgkit.*]
allow_redefinition = True
[mypy-sgkit.*.tests.*]
disallow_untyped_calls = False
disallow_untyped_defs = False
disallow_untyped_decorators = False
[mypy-validation.*]
ignore_errors = True
